feat: cart can show the items
