# controllers/cartController.go
@@ -18,27 +18,60 @@ type CartInput struct {
 }
 
 // GetUserCart godoc
-// @Summary      Create Cart, user role must be USER
-// @Description  registering a user from public access.
+// @Summary      get cart, user role must be USER
+// @Description  get user's cart with status is_checkout = false
 // @Tags         Cart
 // @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
 // @Security BearerToken
 // @Produce      json
 // @Success      200  {object}  map[string]interface{}
-// @Router       /carts [post]
+// @Router       /carts [get]
 func (h CartController) GetUserCart(c *gin.Context) {
 	data, err := services.All.CartService.FindByuserId(c.MustGet("user_id").(uint))
 	if err != nil {
-		c.Error(err)
+		c.Error(err).SetMeta(httperror.NewMeta(http.StatusNotFound).SetData("you don't have a cart"))
 		return
 	}
 
 	c.JSON(http.StatusOK, gin.H{"message": "success", "data": data})
 }
 
+// UpdateCart godoc
+// @Summary      update cart, user role must be USER and must own the cart
+// @Description  update cart name
+// @Tags         Cart
+// @Param id path string true "cart id"
+// @Param        Body  body  CartInput  true  "the body to update a Cart"
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
+// @Produce      json
+// @Success      200  {object}  map[string]interface{}
+// @Router       /carts/{id} [put]
+func (h CartController) UpdateCart(c *gin.Context) {
+	var input CartInput
+
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.Error(err).SetMeta(httperror.NewMeta(http.StatusBadRequest))
+		return
+	}
+
+	cartId := c.MustGet("cart_id").(uint)
+
+	m := models.Cart{}
+	m.Name = input.Name
+
+	savedCart, err := services.All.CartService.Update(cartId, &m)
+	if err != nil {
+		c.Error(err)
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"message": "success", "data": savedCart})
+}
+
 // CreateCart godoc
 // @Summary      Create Cart, user role must be USER
-// @Description  registering a user from public access.
+// @Description  create cart
 // @Tags         Cart
 // @Param        Body  body  CartInput  true  "the body to create a Cart"
 // @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
@@ -75,14 +108,15 @@ type CartItemInput struct {
 
 // AddCartItem godoc
 // @Summary      add cart item, user role must be USER
-// @Description  registering a user from public access.
+// @Description  add cart item
 // @Tags         Cart
-// @Param        Body  body  CartInput  true  "the body to create a cart item"
+// @Param id path string true "cart id"
+// @Param        Body  body  CartItemInput  true  "the body to add a cart item"
 // @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
 // @Security BearerToken
 // @Produce      json
 // @Success      200  {object}  map[string]interface{}
-// @Router       /carts/:id/items [post]
+// @Router       /carts/{id}/items [post]
 func (h CartController) AddCartItem(c *gin.Context) {
 	var input CartItemInput
 
@@ -113,21 +147,14 @@ func (h CartController) AddCartItem(c *gin.Context) {
 
 // DeleteCartItem godoc
 // @Summary      delete cart item, user role must be USER
-// @Description  registering a user from public access.
+// @Description  delete cart
 // @Tags         Cart
-// @Param        Body  body  CartInput  true  "the body to create a cart item"
 // @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
 // @Security BearerToken
 // @Produce      json
 // @Success      200  {object}  map[string]interface{}
-// @Router       /carts/:cart_id/items/:item_id [delete]
+// @Router       /carts/{cart_id}/items/{item_id} [delete]
 func (h CartController) DeleteCartItem(c *gin.Context) {
-	var input CartItemInput
-
-	if err := c.ShouldBindJSON(&input); err != nil {
-		c.Error(err).SetMeta(httperror.NewMeta(http.StatusBadRequest))
-		return
-	}
 	itemIdString := c.Param("item_id")
 	itemId, err := strconv.ParseUint(itemIdString, 10, 32)
 	if err != nil {
